# refugee-camp-image-analysis

./: README.md  pyproject.toml
scripts/: detect-shleters.py  draw_boxes.py
