[tool.poetry]
name = "refugree-camp-image-analysis"
version = "0.1.0"
description = ""
authors = ["Stephen Baston <stephenbaston@gmail.com>"]
readme = "README.md"
packages = [{include = "scripts"}]

[tool.poetry.dependencies]
python = "^3.12"
opencv-python = "^4.9.0.80"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
